[package]
name = "spdk-rs"
version = "0.1.0"
authors = ["sujayakar <sujayakar314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.55.1"
cc = "1.0"

[dependencies]
dpdk-rs = { git = "https://github.com/sujayakar/dpdk-rs", rev = "4cd0c7724cfe56f0150f9b55004c45fb47d83f18" }
